# geniza-sdk-python

./: .gitignore  .pylintrc  LICENSE  README.md  geniza.py  pyproject.toml
.github/workflows/: pylint.yml
api/: client.py
geniza/: __init__.py  access.py  client.py  config.py  geniza.py
geniza/config/: access.py  base_config.py  config.py
geniza/scripts/: poetry_scripts.py
geniza_sdk_python/: access.py  client.py  config.py  geniza.py
geniza_sdk_python/scripts/: poetry_scripts.py
tests/: test_access.py  test_client.py  test_geniza.py
