[tool.poetry]
name = "geniza_sdk_python"
version = "0.1.1"
description = "This SDK is the best and easiest way to connect to the Geniza.ai API."
authors = ["Geniza AI <support@geniza.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
httmock = "^1.4.0"
pylint = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = 'geniza_sdk_python.scripts.poetry_scripts:test'
